--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -31,7 +31,7 @@
   "Moins": "Less",
   "hotel": "Hotel",
   "read": "Read",
-  
+
   "navbar": {
     "space": "Current Location",
     "yelpProfessional": "Enjoy for Professionals",
@@ -86,7 +86,7 @@
     "claimYourBusiness": "Claim Your Business",
     "loginInToBusiness": "Log in to Your Business"
   },
-  
+
   "home": {
     "descriptionHomePart1": "Discover great deals and have fun effortlessly.",
     "descriptionHomePart2": "Whether you're traveling alone, with family, friends, or colleagues,",
@@ -104,7 +104,7 @@
       "administrations": "Administrations"
     }
   },
-  
+
   "footer": {
     "about": "About",
     "descriptionFooter": "Discover our services and our commitment to providing an exceptional user experience.",
@@ -145,7 +145,7 @@
     "Média": "Media",
     "Cafés & Thés": "Coffees & Teas"
   },
-  
+
   "places": {
     "Le Gourmet": {
       "name": "The Gourmet",
@@ -161,7 +161,7 @@
       "min_price": "10,000 FCFA"
     }
   },
-  
+
   "price": "Price",
   "rating": "Rating",
   "filterBy": "Filter by",
@@ -210,16 +210,16 @@
   "good_for_brunch": "Good for Brunch",
   "takes_reservations": "Takes Reservations",
   "les_meilleurs": "The Best",
-  "recommand":"Recommanded",
+  "recommand": "Recommanded",
   "trie": "Sort",
-  "welcome":"Welcome Back",
-  "or":"OR",
+  "welcome": "Welcome Back",
+  "or": "OR",
   "login_with_google": "Continue With Google",
   "login_with_apple": "Log in With Apple",
   "dont_have_an_account": "Don't have an account ?",
-  "claim_your_business_on_enjoy":"Claim your business on enjoy",
-  "monday" : "Monday",
-  "tuesday" : "Tuesday",
+  "claim_your_business_on_enjoy": "Claim your business on enjoy",
+  "monday": "Monday",
+  "tuesday": "Tuesday",
   "wednesday": "Wednesday",
   "thursday": "Thursday",
   "friday": "Friday",
@@ -233,64 +233,63 @@
   "adresse_web": "Web Adress",
   "horaires": "Schedules",
   "adress_email": "Your Email Address",
-  "ajouter":"Add",
+  "ajouter": "Add",
   "ajouter_commerce": "Add Business",
   "form": "Information Form",
   "forgot_password": "Forgot your password ?",
-  "by_continuing_you_agree_to_Enjoy":" By continuing , you agree to Enjoy",
-  "Terms_of_Service": "Terms of Service",	
-  "and_acknowledge_our":"and acknowledge our",
+  "by_continuing_you_agree_to_Enjoy": " By continuing , you agree to Enjoy",
+  "Terms_of_Service": "Terms of Service",
+  "and_acknowledge_our": "and acknowledge our",
   "Privacy_Policy": "Privacy Policy",
-  "retour":"Back",
-  "passenger":"Passengers",
+  "retour": "Back",
+  "passenger": "Passengers",
   "reservation_siege": "Seat Reservation",
-  "choisir_siege":"Choose a seat",
-  "from":"From",
-  "siege_reserve":"Reserved seats",
+  "choisir_siege": "Choose a seat",
+  "from": "From",
+  "siege_reserve": "Reserved seats",
   "nbre_siege": "Number of reserved seats",
-  "siege_select":"Selected seats",
-  "voyager_sans":"Traveling Without a Neighbor",
-  "payment":"Payment",
-  "card":"Bank Card",
-  "facultatif":"optional",
+  "siege_select": "Selected seats",
+  "voyager_sans": "Traveling Without a Neighbor",
+  "payment": "Payment",
+  "card": "Bank Card",
+  "facultatif": "optional",
   "entrez_votre_email": "Enter your email",
   "entrez_votre_numero_de_telephone": "Enter your telephone number",
   "entrez_votre_nom": "Enter your name",
   "entrez_votre_prenom": "Enter your first name",
-  "your_order":"Your Order",
-  "valider":"Pay now",
-  "direct":"Direct Route",
-  "confirm":"Confirm",
-  "aucun_siege":"No reserved seats",
-  "seat":"seat",
-  "reserve":"reserved",
-  "continuer":"Continue",
-  "filters":"Filters",
-  "direct_only":"Direct only",
-  "resultat":"Resultat",
-  "phrase":"A service fee will be added to each reservation",
+  "your_order": "Your Order",
+  "valider": "Pay now",
+  "direct": "Direct Route",
+  "confirm": "Confirm",
+  "aucun_siege": "No reserved seats",
+  "seat": "seat",
+  "reserve": "reserved",
+  "continuer": "Continue",
+  "filters": "Filters",
+  "direct_only": "Direct only",
+  "resultat": "Resultat",
+  "phrase": "A service fee will be added to each reservation",
 
-  
   "appServices": {
     "agency": {
-        "organizeYourTrip":  "Organize your trip",
-        "services":  "Services",
-        "trackATrip":  "Track a trip",
-        "help":  "Help",
-        "busTravel":  "Bus travel at low prices from 3000 FCFA",
-        "manageMyBooking":  "Manage my booking",
-        "followATrip":  "Follow a trip",
-        "oneWay": "One way",
-        "roundTrip": "Round trip",
-        "from": "From",
-        "to": "To",
-        "departure": "Departure",
-        "return": "Return",
-        "passengers": "Passengers",
-        "oneAdult": " Adult(s)",
-        "children": "Children(s)",
-        "search": "Search",
-        "today": "Today"
+      "organizeYourTrip": "Organize your trip",
+      "services": "Services",
+      "trackATrip": "Track a trip",
+      "help": "Help",
+      "busTravel": "Bus travel at low prices from 3000 FCFA",
+      "manageMyBooking": "Manage my booking",
+      "followATrip": "Follow a trip",
+      "oneWay": "One way",
+      "roundTrip": "Round trip",
+      "from": "From",
+      "to": "To",
+      "departure": "Departure",
+      "return": "Return",
+      "passengers": "Passengers",
+      "oneAdult": " Adult(s)",
+      "children": "Children(s)",
+      "search": "Search",
+      "today": "Today"
     },
     "hotel": {
       "hotelAnnouncement": "Make your reservation now and pay at the hotel. Cancellation is free.",
@@ -305,10 +304,10 @@
       "rooms": "Room(s)",
       "info": "No recent search",
       "addRoom": "Add room",
-      "deleteRoom" : "Delete room",
+      "deleteRoom": "Delete room",
       "travelers": "Travelers",
       "valid": "Validate",
-      "displayCard": "Display the card", 
+      "displayCard": "Display the card",
       "viewDeal": "View deal",
       "filterBy": "Filter by",
       "pricePerNight": "Price per night",
@@ -361,7 +360,7 @@
       "totalOfLengthStay": "TOTAL LENGTH OF STAY",
       "cityTax": "City tax:",
       "8%VAT": "8 % VAT",
-      "RoomsAndOffer":"Rooms and offer:",
+      "RoomsAndOffer": "Rooms and offer:",
       "bookingConfirmed": "Your booking is confirmed",
       "bookingDetails": "Booking details",
       "guest": "GUEST",
@@ -396,8 +395,61 @@
       "bar": "Bar",
       "kidsSpace": "Kids' area",
       "petsAllowed": "Pets allowed",
-      "meetingRoom": "Meeting room"
-
+      "meetingRoom": "Meeting room",
+      "loadingMaps": "Loading Google Maps...",
+      "mapsError": "Google Maps Error:",
+      "priceRange": "Price Range",
+      "justAMoment": "Just a moment...",
+      "hotelsFound": "hotels found",
+      "priceLowToHigh": "Price (low to high)",
+      "priceHighToLow": "Price (high to low)",
+      "noHotelsMatch": "No hotels match your filters.",
+      "adjustFilters": "Try adjusting your filters to see more results.",
+      "freeCancellation": "Free cancellation until 11:59 PM on May 21, 2022",
+      "chargeDate": "Your account will be charged on Sunday, May 22, 2022.",
+      "ifYouCancel": "If you cancel",
+      "apartmentDescription": "King bed stylish Apartment with Loft style family.",
+      "bookNowAgreement": "By clicking the \"BOOK NOW\" button you agree to the processing of your personal data effected in order to complete this booking.",
+      "firstName": "First Name",
+      "firstNameError": "First name must contain at least 2 characters",
+      "lastName": "Last Name",
+      "lastNameError": "Last name must contain at least 2 characters",
+      "emailError": "Please enter a valid email address",
+      "phoneError": "Phone number must be valid (8–15 digits)",
+      "addToYourStay": "Add to your stay",
+      "familyChoice": "The choice of families",
+      "vehicleType": "Vehicle type",
+      "placeType": "Place type",
+      "default": "Default",
+      "disabledParking": "Disabled Parking spot",
+      "travelingWithPets": "Traveling with pets can seem like a daunting task",
+      "previous": "Previous",
+      "motorcycle": "Motorcycle",
+      "bus": "Bus",
+      "bottle": "Bottle of wine",
+      "piece": "Piece",
+      "paymentMethod": "Payment Method",
+      "creditDebitCard": "Credit / Debit Card",
+      "acceptedCards": "Visa, Mastercard, American Express",
+      "payWith": "Pay with",
+      "paypalAccount": "Pay with your PayPal account",
+      "cardDetails": "Card details",
+      "cardNumber": "Card number",
+      "expiryDate": "Expiry date",
+      "securityCode": "Security code",
+      "nameOnCard": "Name on card",
+      "saveCard": "Save this card for future payments",
+      "details": "Details",
+      "smallPayId": "Small Pay ID or Phone Number",
+      "billingAddress": "Billing address",
+      "address": "Address",
+      "city": "City",
+      "postalCode": "Postal code",
+      "country": "Country",
+      "processing": "Processing...",
+      "totalLengthOfStay": "TOTAL LENGTH OF STAY",
+      "noCompromiseComfort": "No compromise on comfort. Enjoy a seamless service, effortless and hassle-free.",
+      "premiumExperience": "An experience designed for your well-being, with premium services and nothing unnecessary."
     }
   },
   "open": "Open",
@@ -409,50 +461,50 @@
   "add_photo": "Add a photo",
   "share": "Share",
   "save": "Save",
-  "whats" : "What's the vibe ?",
-  "inside":"Inside",
+  "whats": "What's the vibe ?",
+  "inside": "Inside",
   "outside": "Outside",
-  "all_photo":"All photos",
-  "moderate_noise":"Moderate noise",
+  "all_photo": "All photos",
+  "moderate_noise": "Moderate noise",
   "outdor_seating": "Outdoor seating",
-  "dog_allow":"Dogs allowed",
+  "dog_allow": "Dogs allowed",
   "hipster": "Hipster",
   "good_for_group": "Good for groups",
-  "good_for_kid" : "Good for kids",
-  "location_schedule" : "Location & opening times",
-  "suggest_edit" : "Suggest an edit",
-  "get_direction" : "Get directions",
-  "day":"Day",
-  "openning" : "Openning",
-  "closing" : "Closing",
-  "overall_rate" : "Overall rating",
+  "good_for_kid": "Good for kids",
+  "location_schedule": "Location & opening times",
+  "suggest_edit": "Suggest an edit",
+  "get_direction": "Get directions",
+  "day": "Day",
+  "openning": "Openning",
+  "closing": "Closing",
+  "overall_rate": "Overall rating",
   "review": "reviews",
   "star": "star",
   "stars": "stars",
-  "share_opinion" : "share the review",
-  "integre_opinion" : "integrate the review",
-  "sort_Enjoy" : "Sort Enjoy",
-  "most_recent" : "Most recent",
-  "old_review" : "Old reviews",
-  "positive_review" : "Positive reviews",
-  "negative_review" : "Negative reviews",
-  "review_elite" : "Review of elites",
-  "English(52)" : "English(52)",
-  "German(42)" : "German(42)",
-  "Spanish(10)" : "Spanish(10)",
-  "5stars" : "5 stars",
-  "4stars" : "4 stars",
-  "3stars" : "3 stars",
-  "2stars" : "2 stars",
-  "1star" : "1 star",
+  "share_opinion": "share the review",
+  "integre_opinion": "integrate the review",
+  "sort_Enjoy": "Sort Enjoy",
+  "most_recent": "Most recent",
+  "old_review": "Old reviews",
+  "positive_review": "Positive reviews",
+  "negative_review": "Negative reviews",
+  "review_elite": "Review of elites",
+  "English(52)": "English(52)",
+  "German(42)": "German(42)",
+  "Spanish(10)": "Spanish(10)",
+  "5stars": "5 stars",
+  "4stars": "4 stars",
+  "3stars": "3 stars",
+  "2stars": "2 stars",
+  "1star": "1 star",
   "All_rating": "All rating",
-  "hepful":"Hepful",
-  "thanks":"Thanks",
-  "lovethis" : "Love this",
-  "ohno" : "Oh no",
-  "open_until" : "Open until",
-  "recommanded" : "Recommended",
-  "numberReview" : "Number of reviews",
+  "hepful": "Hepful",
+  "thanks": "Thanks",
+  "lovethis": "Love this",
+  "ohno": "Oh no",
+  "open_until": "Open until",
+  "recommanded": "Recommended",
+  "numberReview": "Number of reviews",
   "schedule": {
     "monday": "Monday",
     "tuesday": "Tuesday",
@@ -462,43 +514,42 @@
     "saturday": "Saturday",
     "sunday": "Sunday"
   },
-  "restaurantMenu":"Restaurant Menu",
+  "restaurantMenu": "Restaurant Menu",
   "seeMore": "See More",
-  "addToCard" : "Add to Card",
-  "totalDish" : "Total Dishes",
-  "totalAmount" : "Total Amount",
-  "placeOrder" : "Place Order",
-  "Category":{
+  "addToCard": "Add to Card",
+  "totalDish": "Total Dishes",
+  "totalAmount": "Total Amount",
+  "placeOrder": "Place Order",
+  "Category": {
     "Beauty": "Beauty",
-    "Fashion And Beauty":"Fashion And Beauty",
-    "Clothing store":"Clothing store",
-    "club" : "Club",
-    "sports":"Sports",
-    "Automobile":"Automobile",
-    "Building":"Building",
-    "coffee" : "Coffee",
+    "Fashion And Beauty": "Fashion And Beauty",
+    "Clothing store": "Clothing store",
+    "club": "Club",
+    "sports": "Sports",
+    "Automobile": "Automobile",
+    "Building": "Building",
+    "coffee": "Coffee",
     "Alimentation": "Food",
-    "Art":"Art",
-    "Health":"Health",
-    "Services":"Services",
-    "Animals":"Animals",
-    "Real Estate":"Real Estate",
-    "Tourist Sites":"Tourist Sites",	
-    "Habitat":"Habitat",
-    "Hotels and Accommodations" : "Hotels and Accommodations",
+    "Art": "Art",
+    "Health": "Health",
+    "Services": "Services",
+    "Animals": "Animals",
+    "Real Estate": "Real Estate",
+    "Tourist Sites": "Tourist Sites",
+    "Habitat": "Habitat",
+    "Hotels and Accommodations": "Hotels and Accommodations",
     "Hotels": "Hotels",
     "Tourism": "Tourism",
-    "public":"Public",
-    "Church" : "Church",
-    "Transportation":"Transportation",
-    "Travel agency" : "Travel agency",	
-    "Media":"Media",
-    "Restoration" : "Restoration",
-    "Restaurant":"Restaurant",
-    "Wine cellar" : "Wine cellar",
+    "public": "Public",
+    "Church": "Church",
+    "Transportation": "Transportation",
+    "Travel agency": "Travel agency",
+    "Media": "Media",
+    "Restoration": "Restoration",
+    "Restaurant": "Restaurant",
+    "Wine cellar": "Wine cellar",
     "Bar": "Bar"
   },
-  "applyFilter" : "Apply Filter",
-  "in" : "in"
-
+  "applyFilter": "Apply Filter",
+  "in": "in"
 }
