--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -32,8 +32,6 @@
   "hotel": "Hôtel",
   "read": "Lire",
 
-
-  
   "navbar": {
     "space": "Emplacement actuel",
     "yelpProfessional": "Enjoy pour les professionnels",
@@ -88,7 +86,7 @@
     "claimYourBusiness": "Revendiquer votre entreprise",
     "loginInToBusiness": "Connectez-vous à votre entreprise"
   },
-  
+
   "home": {
     "descriptionHomePart1": "Découvrez des bons plans et amusez-vous sans effort.",
     "descriptionHomePart2": "Que vous voyagiez seul, en famille, entre amis ou avec des collègues,",
@@ -106,7 +104,7 @@
       "administrations": "Administrations"
     }
   },
-  
+
   "footer": {
     "about": "À propos",
     "descriptionFooter": "Découvrez nos services et notre engagement à fournir une expérience utilisateur exceptionnelle.",
@@ -147,7 +145,7 @@
     "Média": "Média",
     "Cafés & Thés": "Cafés & thés"
   },
-  
+
   "places": {
     "Le Gourmet": {
       "name": "Le Gourmet",
@@ -163,7 +161,7 @@
       "min_price": "10 000 FCFA"
     }
   },
-  
+
   "price": "Prix",
   "filter": "Filtres",
   "suggested": "Suggéré",
@@ -211,7 +209,7 @@
   "good_for_brunch": "Bon pour le brunch",
   "takes_reservations": "Prend des réservations",
   "les_meilleurs": "Les meilleurs",
-  "recommand":"Recommandé",
+  "recommand": "Recommandé",
   "trie": "Trié",
   "monday": "Lundi",
   "tuesday": "Mardi",
@@ -228,68 +226,68 @@
   "adresse_web": "Adresse Web",
   "horaires": "Horaires",
   "adress_email": "Votre Adresse Email",
-  "ajouter":"Add",
+  "ajouter": "Add",
   "ajouter_commerce": "Ajouter Commerce",
   "form": "Formulaire d'Informations",
-  "welcome":"Content de vous revoir",
-  "or":"Ou",
+  "welcome": "Content de vous revoir",
+  "or": "Ou",
   "login_with_google": "Continuer avec Google",
   "login_with_apple": "Connectez-vous avec Apple",
   "dont_have_an_account": "Vous n'avez pas de compte ?",
-  "claim_your_business_on_enjoy":"Revendiquez votre entreprise sur Enjoy",
+  "claim_your_business_on_enjoy": "Revendiquez votre entreprise sur Enjoy",
   "forgot_password": "Vous avez oublié votre mot de passe ?",
-  "by_continuing_you_agree_to_Enjoy":" En continuant, vous acceptez Enjoy",
-  "Terms_of_Service": "Des Conditions d'Utilisation",	
-  "and_acknowledge_our":"et reconnaissez notre",
+  "by_continuing_you_agree_to_Enjoy": " En continuant, vous acceptez Enjoy",
+  "Terms_of_Service": "Des Conditions d'Utilisation",
+  "and_acknowledge_our": "et reconnaissez notre",
   "Privacy_Policy": "Politique de Confidentialité.",
-  "retour":"Retour",
-  "passenger":"Passagers",
+  "retour": "Retour",
+  "passenger": "Passagers",
   "reservation_siege": "Réservation de Siège",
-  "choisir_siege":"Choisir un siège",
-  "from":"À partir de",
-  "siege_reserve":"Sièges réservés",
+  "choisir_siege": "Choisir un siège",
+  "from": "À partir de",
+  "siege_reserve": "Sièges réservés",
   "nbre_siege": "Nombre de sièges réservés",
-  "siege_select":"Sièges sélectionnés",
-  "voyager_sans":"Voyager Sans Voisin",
-  "payment":"Paiement",
-  "card":"Carte Bancaire",
-  "facultatif":"facultatif",
+  "siege_select": "Sièges sélectionnés",
+  "voyager_sans": "Voyager Sans Voisin",
+  "payment": "Paiement",
+  "card": "Carte Bancaire",
+  "facultatif": "facultatif",
   "entrez_votre_email": "Entrez votre email",
   "entrez_votre_numero_de_telephone": "Entrez votre numero de telephone",
   "entrez_votre_nom": "Entrez votre nom",
   "entrez_votre_prenom": "Entrez votre prénom",
-  "your_order":"Votre Commande",
-  "valider":"Payer maintenant",
-  "direct":"Trajet Direct",
-  "confirm":"Confirmer",
-  "aucun_siege":"Aucun siège réservé",
-  "seat":"siège",
-  "reserve":"réservé",
-  "continuer":"Continuer",
-  "filters":"Filtres",
-  "direct_only":"Direct uniquement",
-  "resultat":"Résultat",
-  "phrase":"Des frais de service seront ajoutés à chaque réservation",
+  "your_order": "Votre Commande",
+  "valider": "Payer maintenant",
+  "direct": "Trajet Direct",
+  "confirm": "Confirmer",
+  "aucun_siege": "Aucun siège réservé",
+  "seat": "siège",
+  "reserve": "réservé",
+  "continuer": "Continuer",
+  "filters": "Filtres",
+  "direct_only": "Direct uniquement",
+  "resultat": "Résultat",
+  "phrase": "Des frais de service seront ajoutés à chaque réservation",
   "appServices": {
     "agency": {
-        "organizeYourTrip": "Organisez votre voyage",
-        "services": "Services",
-        "trackATrip":  "Suivez un trajet",
-        "help": "Aide",
-        "busTravel":  "Voyage en bus à petit prix à partir de 3000 FCFA",
-        "manageMyBooking":  "Gérer ma réservation",
-        "followATrip":  "Suivre un trajet",
-        "oneWay": "Aller simple",
-        "roundTrip": "Aller et retour",
-        "from": "De",
-        "to": "À",
-        "departure": "Départ",
-        "return": "Retour",
-        "passengers": "Passagers",
-        "oneAdult": " Adulte(s)",
-        "children": "Enfant(s)",
-        "search": "Chercher",
-        "today": "Aujourd’hui"
+      "organizeYourTrip": "Organisez votre voyage",
+      "services": "Services",
+      "trackATrip": "Suivez un trajet",
+      "help": "Aide",
+      "busTravel": "Voyage en bus à petit prix à partir de 3000 FCFA",
+      "manageMyBooking": "Gérer ma réservation",
+      "followATrip": "Suivre un trajet",
+      "oneWay": "Aller simple",
+      "roundTrip": "Aller et retour",
+      "from": "De",
+      "to": "À",
+      "departure": "Départ",
+      "return": "Retour",
+      "passengers": "Passagers",
+      "oneAdult": " Adulte(s)",
+      "children": "Enfant(s)",
+      "search": "Chercher",
+      "today": "Aujourd’hui"
     },
     "hotel": {
       "hotelAnnouncement": "Effectuez votre réservation maintenant et réglez à l'hôtel. L'annulation est gratuite.",
@@ -303,7 +301,7 @@
       "info": "Aucune Recherche Recente",
       "rooms": "Chambre(s)",
       "addRoom": "Ajouter une chambre",
-      "deleteRoom" : "Supprimer une chambre",
+      "deleteRoom": "Supprimer une chambre",
       "travelers": "Voyageurs",
       "valid": "Valider",
       "displayCard": "Afficher la carte",
@@ -359,7 +357,7 @@
       "totalOfLengthStay": "DURÉE TOTALE DU SÉJOUR",
       "cityTax": "Taxe ville:",
       "8%VAT": "8 % TVA",
-      "RoomsAndOffer":"Chambres et Offres:",
+      "RoomsAndOffer": "Chambres et Offres:",
       "bookingConfirmed": "Votre réservation est confirmée",
       "bookingDetails": "Détails de la réservation",
       "guest": "INVITÉ",
@@ -378,7 +376,7 @@
       "parkingInfo1": "délivré par la machine d'entrée du parking.. ",
       "propertyType": "Type de logement",
       "apartment": "Appartement",
-      "suite": "ggg",
+      "suite": "Suite",
       "duplex": "Duplex",
       "budget": "Économique",
       "standard": "Standard",
@@ -394,63 +392,116 @@
       "bar": "Bar",
       "kidsSpace": "Espace enfants",
       "petsAllowed": "Animaux acceptés",
-      "meetingRoom": "Salle de réunion"
-
+      "meetingRoom": "Salle de réunion",
+      "loadingMaps": "Chargement de Google Maps...",
+      "mapsError": "Erreur Google Maps:",
+      "priceRange": "Gamme de prix",
+      "justAMoment": "Un instant...",
+      "hotelsFound": "hôtels trouvés",
+      "priceLowToHigh": "Prix (croissant)",
+      "priceHighToLow": "Prix (décroissant)",
+      "noHotelsMatch": "Aucun hôtel ne correspond à vos critères.",
+      "adjustFilters": "Essayez d'ajuster vos filtres pour voir plus de résultats.",
+      "freeCancellation": "Annulation gratuite jusqu'à 23h59 le 21 mai 2022",
+      "chargeDate": "Votre compte sera débité le dimanche 22 mai 2022.",
+      "ifYouCancel": "Si vous annulez",
+      "apartmentDescription": "Appartement élégant avec lit king-size de style loft pour la famille.",
+      "bookNowAgreement": "En cliquant sur le bouton « RÉSERVER MAINTENANT », vous acceptez le traitement de vos données personnelles effectué pour finaliser cette réservation.",
+      "firstName": "Prénom",
+      "firstNameError": "Le prénom doit contenir au moins 2 caractères",
+      "lastName": "Nom",
+      "lastNameError": "Le nom doit contenir au moins 2 caractères",
+      "emailError": "Veuillez entrer une adresse email valide",
+      "phoneError": "Le numéro de téléphone doit être valide (8-15 chiffres)",
+      "addToYourStay": "Ajouter à votre séjour",
+      "familyChoice": "Le choix des familles",
+      "vehicleType": "Type de véhicule",
+      "placeType": "Type de lieu",
+      "default": "Par défaut",
+      "disabledParking": "Place de parking pour personnes handicapées",
+      "travelingWithPets": "Voyager avec des animaux peut sembler une tâche ardue",
+      "previous": "Précédent",
+      "motorcycle": "Moto",
+      "bus": "Bus",
+      "bottle": "Bouteille de vin",
+      "piece": "Pièce",
+      "paymentMethod": "Méthode de paiement",
+      "creditDebitCard": "Carte de crédit / débit",
+      "acceptedCards": "Visa, Mastercard, American Express",
+      "payWith": "Payer avec",
+      "paypalAccount": "Payer avec votre compte PayPal",
+      "cardDetails": "Détails de la carte",
+      "cardNumber": "Numéro de carte",
+      "expiryDate": "Date d’expiration",
+      "securityCode": "Code de sécurité",
+      "nameOnCard": "Nom sur la carte",
+      "saveCard": "Enregistrer cette carte pour les paiements futurs",
+      "details": "Détails",
+      "smallPayId": "ID Small Pay ou numéro de téléphone",
+      "billingAddress": "Adresse de facturation",
+      "address": "Adresse",
+      "city": "Ville",
+      "postalCode": "Code postal",
+      "country": "Pays",
+      "processing": "Traitement en cours...",
+      "totalLengthOfStay": "DURÉE TOTALE DU SÉJOUR",
+      "noCompromiseComfort": "Aucun compromis sur le confort. Profitez d’un service fluide, sans effort ni tracas.",
+      "premiumExperience": "Une expérience pensée pour votre bien-être, avec des prestations haut de gamme et sans superflu."
     }
   },
   "open": "Ouvert",
   "claimed": "Revendiqué",
-  "see_photo":"Voir toutes les photos",
-  "next_day":"Le jour suivant",
-  "see_hours":"Voir les heures",
+  "see_photo": "Voir toutes les photos",
+  "next_day": "Le jour suivant",
+  "see_hours": "Voir les heures",
   "write_review": "Écrire un avis",
   "add_photo": "Ajouter une photo",
   "share": "Partager",
   "save": "Sauvegarder",
-  "whats" : "Quelle est l'ambiance ?",
-  "inside":"À l'intérieur",
-  "outside": "À l'extérieureur", 
-  "all_photo":"Toutes les photos",
-  "moderate_noise":"Bruit modéré",
+  "whats": "Quelle est l'ambiance ?",
+  "inside": "À l'intérieur",
+  "outside": "À l'extérieureur",
+  "all_photo": "Toutes les photos",
+  "moderate_noise": "Bruit modéré",
   "outdor_seating": "Sièges extérieurs",
-  "dog_allow":"Chiens acceptés",
+  "dog_allow": "Chiens acceptés",
   "hipster": "Hipster",
   "good_for_group": "Bon pour les groupes",
-  "good_for_kid" : "Bon pour les enfants",
-  "location_schedule" : "Emplacement & horaires",
-  "suggest_edit" : "Suggérer une modification",
-  "get_direction" : "Obtenir l'itinéraire",
-  "day":"Jour",
-  "openning" : "Ouverture",
-  "closing" : "Fermeture",
-  "overall_rate" : "Note globale",
+  "good_for_kid": "Bon pour les enfants",
+  "location_schedule": "Emplacement & horaires",
+  "suggest_edit": "Suggérer une modification",
+  "get_direction": "Obtenir l'itinéraire",
+  "day": "Jour",
+  "openning": "Ouverture",
+  "closing": "Fermeture",
+  "overall_rate": "Note globale",
   "review": "avis",
   "star": "étoile",
   "stars": "étoiles",
-  "share_opinion" : "partager l'avis",
-  "integre_opinion" : "intergrer l'avis",
-  "sort_Enjoy" : "Tri Enjoy",
-  "most_recent" : "Les plus recents",
-  "old_review" : "Avis anciens",
-  "positive_review" : "Avis positifs",
-  "negative_review" : "Avis négatifs",
-  "review_elite" : "Avis d'elites",
+  "share_opinion": "partager l'avis",
+  "integre_opinion": "intergrer l'avis",
+  "sort_Enjoy": "Tri Enjoy",
+  "most_recent": "Les plus recents",
+  "old_review": "Avis anciens",
+  "positive_review": "Avis positifs",
+  "negative_review": "Avis négatifs",
+  "review_elite": "Avis d'elites",
   "English(52)": "Anglais(52)",
-  "German(42)" : "Allemand(42)",
-  "Spanish(10)" : "Espagnol(10)",
+  "German(42)": "Allemand(42)",
+  "Spanish(10)": "Espagnol(10)",
   "5stars": "5 étoiles",
   "4stars": "4 étoiles",
   "3stars": "3 étoiles",
   "2stars": "2 étoiles",
   "1star": "1 étoile",
   "All_rating": "Toutes les notes",
-  "hepful":"Utile",
-  "thanks":"Merci",
-  "lovethis" : "J'adore ça",
-  "ohno" : "oh non",
-  "open_until" : "Ouvert jusqu'à",
-  "recommanded" : "Recommandé",
-  "numberReview" : "Nombre d'avis",
+  "hepful": "Utile",
+  "thanks": "Merci",
+  "lovethis": "J'adore ça",
+  "ohno": "oh non",
+  "open_until": "Ouvert jusqu'à",
+  "recommanded": "Recommandé",
+  "numberReview": "Nombre d'avis",
   "schedule": {
     "monday": "Lundi",
     "tuesday": "Mardi",
@@ -460,46 +511,42 @@
     "saturday": "Samedi",
     "sunday": "Dimanche"
   },
-  "restaurantMenu":"Menu du Restaurant",
-  "seeMore": "Voir Plus" ,
-  "addToCard" : "Ajouter au panier",
-  "totalDish" : "Plats totaux",
-  "totalAmount" : "Montant total",
+  "restaurantMenu": "Menu du Restaurant",
+  "seeMore": "Voir Plus",
+  "addToCard": "Ajouter au panier",
+  "totalDish": "Plats totaux",
+  "totalAmount": "Montant total",
   "placeOrder": "Passer la commande",
-  "Category":{
+  "Category": {
     "Beauty": "Beauté",
-    "Fashion And Beauty":"Modes Et Beauté",
-    "Clothing store":"Shop de vêtements",
-    "club" : "Club",
-    "sports":"Sports",
-    "Automobile":"Automobile",
-    "Building":"Bâtiment",
+    "Fashion And Beauty": "Modes Et Beauté",
+    "Clothing store": "Shop de vêtements",
+    "club": "Club",
+    "sports": "Sports",
+    "Automobile": "Automobile",
+    "Building": "Bâtiment",
     "coffee": "café",
     "Alimentation": "Alimentation",
-    "Art":"Art",
-    "Health":"Santé",
-    "Services":"Services",
-    "Animals":"Animaux",
-    "Real Estate":"Immobilier",
-    "Tourist Sites":"Sites Touristiques",	
-    "Habitat":"Habitat",
+    "Art": "Art",
+    "Health": "Santé",
+    "Services": "Services",
+    "Animals": "Animaux",
+    "Real Estate": "Immobilier",
+    "Tourist Sites": "Sites Touristiques",
+    "Habitat": "Habitat",
     "Hotels and Accommodations": "Hotels Et Hebergements",
-    "Hotels":"Hôtels",
-    "Tourism":"Tourisme",
-    "public":"Public",
-    "Church" : "Église",
-    "Transportation":"Transport",
-    "Travel agency" : "Agence de voyage",	
-    "Media":"Médias",
-    "Restoration" :"Restauration",
-    "Restaurant":"Restaurant",
-    "Wine cellar" :"Cave à vins",
+    "Hotels": "Hôtels",
+    "Tourism": "Tourisme",
+    "public": "Public",
+    "Church": "Église",
+    "Transportation": "Transport",
+    "Travel agency": "Agence de voyage",
+    "Media": "Médias",
+    "Restoration": "Restauration",
+    "Restaurant": "Restaurant",
+    "Wine cellar": "Cave à vins",
     "Bar": "Bar"
-  
   },
-  "applyFilter" : "Appliquer le Filtre",
-  "in" : "à"
-  
+  "applyFilter": "Appliquer le Filtre",
+  "in": "à"
 }
-
-  
