--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -31,7 +31,44 @@
   "Moins": "Less",
   "hotel": "Hotel",
   "read": "Read",
-
+  "previous": "Previous",
+  "password": "Password",
+  "next": "Next",
+  "saveService": "Save a service",
+  "baseInfo": "Basic information",
+  "selectCategory": "Select a category",
+  "descriptionUtilBasicInfo": "Une description détaillée aidera les utilisateurs à comprendre votre service. en anglais",
+  "descriptionUtilBasicInfoImage": "Image principale du service – elle sera visible par vos clients en anglais",
+  "description": "Description",
+  "mainImage": "Image principale du service en anglais",
+  "chooseImage": "Choose a image" ,
+  "pleaseGiveInfo": "Please give all Informations for your service.",
+  "errorLoad": "Error to load Google Maps :",
+  "loadprogressing": "Loading map in progress",
+  "positionMap": "Position on a map",
+  "descriptionTodoInMap": "Cliquez sur la carte selon votre addresse recherchez pour définir l'emplacement de votre service. en anglais",
+  "infoContact": "Contact Informations",
+  "infoConnectDashboard": "Connection Informations in your Dashboard",
+  "webSite": "Web Site",
+  "descriptioncontactInfo": "Comment les clients peuvent-ils vous contacter et vous trouver? en anglais",
+  "optional": "Optional",
+  "infoOperatinal": "Operationals Informations",
+  "detailsOnHour": "Details on il faut completer en anglais",
+  "openingDays": "Opening days",
+  "allWeek": "All the week-end",
+  "mondayToFriday": "Monday to Friday",
+  "aParticularDay": "A particular Day",
+  "openingHour": "Opening Hours",
+  "priceRange": "Price Range", 
+  "selectPriceRange": "Select a Price Range",
+  "maxCapacity": "Maximum Capacity",
+  "maxNumberPersons": "Can accomodate up to max person",
+  "additionalInfo": "Additional Informations",
+  "detailsAdditional": "Détails additionnels pour mieux présenter votre service. en anglais",
+  "anemeties": "Équipements et services en anglais",
+  "policy&rules": "Policy and Rule",
+  "descriptionToPolicy": "Décrivez vos politiques d'annulation, règles de l'établissement, etc. en anglias",
+  "payementMethod": "Payement method accepted",
   "navbar": {
     "noResult" : "No found",
     "space": "Current Location",
@@ -86,6 +123,8 @@
     "addABusiness": "Add a Busines",
     "claimYourBusiness": "Claim Your Business",
     "loginInToBusiness": "Log in to Your Business"
+    
+
   },
 
   "home": {
