--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -31,7 +31,44 @@
   "Moins": "Moins",
   "hotel": "Hôtel",
   "read": "Lire",
-
+  "previous": "Précédent",
+  "password": "Mot de passe",
+  "next": "Suivant",
+  "saveService": "Enregistrer le Service",
+  "baseInfo": "Informations de base",
+  "selectCategory": "Sélectionnez une catégorie",
+  "descriptionUtilBasicInfo": "Une description détaillée aidera les utilisateurs à comprendre votre service.",
+  "descriptionUtilBasicInfoImage": "Image principale du service – elle sera visible par vos clients",
+  "mainImage": "Image principale du service",
+  "description": "Description",
+  "chooseImage": "Choisir l'image" ,
+  "pleaseGiveInfo": "Veuillez fournir les informations principales concernant votre service.",
+  "errorLoad": "Erreur de chargement de Google Maps:",
+  "loadprogressing": "Chargement de la carte en cours",
+  "positionMap": "Position sur la carte",
+  "descriptionTodoInMap": "Cliquez sur la carte selon votre addresse recherchez pour définir l'emplacement de votre service.",
+  "infoContact": "Informations de Contact",
+  "infoConnectDashboard": "Information de Connection a votre Dashboard",
+  "webSite": "Site Web",
+  "descriptioncontactInfo": "Comment les clients peuvent-ils vous contacter et vous trouver?",
+  "optional": "Optionnel",
+  "infoOperatinal": "Informations opérationnelles",
+  "detailsOnHour": "Détails sur les horaires et la capacité de votre service.",
+  "openingDays": "Jours d'ouverture",
+  "allWeek": "Toute la semaine",
+  "mondayToFriday": "Sauf le week-end",
+  "aParticularDay": "Un jour en particulier",
+  "openingHour": "Horaires d'ouverture",
+  "priceRange": "Gamme de Prix",
+  "selectPriceRange": "Sélectionnez une gamme de prix",
+  "maxCapacity": "Capacité maximale",
+  "maxNumberPersons": "Nombre maximum de personnes que votre service peut accueillir simultanément.",
+  "additionalInfo": "Informations supplémentaires",
+  "detailsAdditional": "Détails additionnels pour mieux présenter votre service.",
+  "anemeties": "Équipements et services",
+  "policy&rules": "Politiques et règlements",
+  "descriptionToPolicy": "Politiques et règlements",
+  "payementMethod": "Modes de paiement acceptés",
   "navbar": {
     "noResult" : "Pas trouver",
     "space": "Emplacement actuel",
